--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,23 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileSoftware_project"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
+
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
 
         <activity android:name=".PlusFoodActivity"
             android:exported="true"/>
         <activity android:name=".ShowCalActivity"
+            android:exported="true"/>
+        <activity android:name=".ShowListActivity"
             android:exported="true"/>
     </application>
 
