--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileSoftware_project"
         tools:targetApi="31">
+        <provider
+            android:name="com.cource.mobilesoftware_project.MyContentProvider"
+            android:authorities="com.cource.mobilesoftware_project.MyContentProvider"
+            android:enabled="true"
+            android:exported="true"></provider>
         <activity android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
@@ -34,6 +39,14 @@
             android:exported="true"/>
         <activity android:name=".ShowListActivity"
             android:exported="true"/>
+        <activity android:name=".CustomPopupPlus"
+            android:theme="@android:style/Theme.Dialog"
+            android:exported="true"/>
     </application>
+
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 </manifest>
