--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,12 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileSoftware_project"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:replace="android:allowBackup">
         <provider
             android:name="com.cource.mobilesoftware_project.MyContentProvider"
             android:authorities="com.cource.mobilesoftware_project.MyContentProvider"
             android:enabled="true"
             android:exported="true"></provider>
+        <activity
+            android:name=".GoogleMapActivity"
+            android:exported="true"
+            android:foregroundServiceType="location">
+        <meta-data
+                android:name="android.app.lib_name"
+                android:value="AIzaSyDlb5R_zYGPNDPBJU-QYjNmhrDX0SrEzwE" />
+        </activity>
         <activity android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
@@ -37,16 +47,27 @@
             android:exported="true"/>
         <activity android:name=".ShowCalActivity"
             android:exported="true"/>
-        <activity android:name=".ShowListActivity"
+        <activity android:name=".ShowMonthListActivity"
             android:exported="true"/>
-        <activity android:name=".CustomPopupPlus"
-            android:theme="@android:style/Theme.Dialog"
+        <activity android:name=".ShowDayListActivity"
             android:exported="true"/>
+
+        <activity android:name=".CustomPopup"
+            android:exported="true"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}"/>
     </application>
 
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
 
 </manifest>
